resolve static registry tags once
The previous implementation diverged from vanilla for resolve static registry tags once. Update the affected code and tests to match the vanilla behavior and preserve regression coverage.